--- a/css/styles.css
+++ b/css/styles.css
@@ -2860,6 +2860,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #1e30f3;
 }
 
+.btn-primarytwo {
+  --bs-btn-color: #1e30f3;
+  --bs-btn-bg: #fff;
+  --bs-btn-border-color: #1e30f3;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #1a29cf;
+  --bs-btn-hover-border-color: #1826c2;
+  --bs-btn-focus-shadow-rgb: 64, 79, 245;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #1826c2;
+  --bs-btn-active-border-color: #1724b6;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #1e30f3;
+  --bs-btn-disabled-border-color: #1e30f3;
+}
+
 .btn-secondary {
   --bs-btn-color: #000;
   --bs-btn-bg: #e21e80;
